dataset/local/tf_ec2_transit_gateway_vpc/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-transit-gateways-vpc-request
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-transit-gateways-vpc-request
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-transit-gateways-vpc-request
    kind: Plan
    resources:
      - bad-plan
    result: fail
